--- a/views/book-views/allBooks.hbs
+++ b/views/book-views/allBooks.hbs
@@ -4,7 +4,7 @@
     {{#each booksFromDB}}
     <li>
       <a href="/books/{{this._id}} "> {{ this.title }} {{ this.description }}</a>
-      <a href="/books/{{this.}}"
+      <a href="/books/{{this.}}"></a>
       <form action-"/books/{{ this._id }}/delete" method="POST">
         <button>Delete</button>
       </form>
